# powerprofile

./: .bumpversion.cfg  .gitignore  .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: python2.7-app.yml  python3-app.yml  python3.10-app.yml  python3.6-app.yml  python3.7-app.yml  python3.8-app.yml  python3.9-app.yml  release.yml  version.yml
powerprofile/: __init__.py  powerprofile.py  utils.py
spec/: exceptions_spec.py  interpolate_spec.py  powerprofile_spec.py  powerprofileqh_spec.py
spec/data/: curve_all.json  demo_ac_curve.json  erp_curve.json
